# batis-xml

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-plz.yml
benches/: parse_1mb.rs
examples/: dump_statements.rs  include_graph.rs  k1_harness.rs  q_chain.rs
fixtures/: README.md
fixtures/hostile/: bare_ampersand_edge_cases.xml  mid_attribute_truncation.xml  non_xml_preamble.xml  truncated_mid_tag.xml
fixtures/ibatis/: colon_option_placeholder.expected.json  colon_option_placeholder.xml  dangling_refid_suppressed.expected.json  dangling_refid_suppressed.xml  doubled_delimiter_escapes.expected.json  doubled_delimiter_escapes.xml  doubled_dollar_escape.expected.json  doubled_dollar_escape.xml  dual_dialect_pagination_mysql.expected.json  dual_dialect_pagination_mysql.xml  dual_dialect_pagination_oracle.expected.json  dual_dialect_pagination_oracle.xml  dual_dialect_upsert_mysql.expected.json  dual_dialect_upsert_mysql.xml  dual_dialect_upsert_oracle.expected.json  dual_dialect_upsert_oracle.xml  dynamic_column_marker.expected.json  dynamic_column_marker.xml  dynamic_prepend_suppression.expected.json  dynamic_prepend_suppression.xml  embedded_prefix_ids.expected.json  embedded_prefix_ids.xml  isequal_comparevalue_property.expected.json  isequal_comparevalue_property.xml  iterate_bracket_prop.expected.json  iterate_bracket_prop.xml  minimal_dual_dialect_mysql.expected.json  minimal_dual_dialect_mysql.xml  minimal_dual_dialect_oracle.expected.json  minimal_dual_dialect_oracle.xml  orphaned_statement.expected.json  orphaned_statement.xml  procedure_call.expected.json  procedure_call.xml  resultmap_basic.expected.json  resultmap_basic.xml  selectkey_split.expected.json  selectkey_split.xml
fixtures/mybatis/: bare_ampersand_in_text.expected.json  bare_ampersand_in_text.xml  bind_expression.expected.json  bind_expression.xml  branch_limit_boundary_32_stays_variants.expected.json  branch_limit_boundary_32_stays_variants.xml  cdata_straddling_placeholder.expected.json  cdata_straddling_placeholder.xml  choose_otherwise.expected.json  choose_otherwise.xml  choose_without_otherwise.expected.json  choose_without_otherwise.xml  comparison_operators_in_cdata.expected.json  comparison_operators_in_cdata.xml  dangling_refid.expected.json  dangling_refid.xml  databaseid_dual_mysql.expected.json  databaseid_dual_mysql.xml  databaseid_dual_oracle.expected.json  databaseid_dual_oracle.xml  databaseid_no_duplicate_when_different.expected.json  databaseid_no_duplicate_when_different.xml  dual_dialect_selectkey_inherits_database_id.expected.json  dual_dialect_selectkey_inherits_database_id.xml  duplicate_attribute.expected.json  duplicate_attribute.xml  duplicate_id.expected.json  duplicate_id.xml  dynamic_column_marker.expected.json  dynamic_column_marker.xml  dynamic_set.expected.json  dynamic_set.xml  dynamic_trim.expected.json  dynamic_trim.xml  dynamic_where.expected.json  dynamic_where.xml  encoding_mismatch_declared_utf8_actual_euckr.expected.json  encoding_mismatch_declared_utf8_actual_euckr.xml  entity_heavy_text.expected.json  entity_heavy_text.xml  (+41 more)
schema/: README.md  batis-xml.v1.json
src/: encoding.rs  flatten.rs  lib.rs  model.rs  parse.rs  placeholder.rs
src/snapshots/: batis_xml__parse__tests__mm_03_full_statement_collection_snapshot.snap  batis_xml__parse__tests__mm_06_full_flattening_snapshot.snap
tests/: conformance.rs  mm12_proptest.rs  schema_v1.rs  small_stack_regression.rs
wasm/: Cargo.toml  README.md  build.sh  package-lock.json  package.json  schema.d.ts
wasm/src/: lib.rs
wasm/tests/: smoke.js
