[package]
name = "batis-xml"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ESPINS <dlwlalsggg@gmail.com>"]
description = "Parser and dynamic-SQL flattener for MyBatis and iBatis mapper XML — resilient to broken legacy input, with a language-neutral JSON output model"
license = "MIT"
repository = "https://github.com/espins-labs/batis-xml"
keywords = ["mybatis", "ibatis", "sql", "parser", "xml"]
categories = ["parser-implementations"]
exclude = ["fixtures/hostile/*"]

# wasm constraint: pure-Rust dependencies only (keep wasm32-unknown-unknown clean)
[dependencies]
quick-xml = "0.37"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
criterion = { version = "0.5", default-features = false }
# Scratch tooling only (examples/k1_harness.rs) — not part of the
# published library, doesn't affect the wasm32 build.
regex = "1"

[[bench]]
name = "parse_1mb"
harness = false
