[workspace]
members = ["wasm"]
# Plain `cargo build`/`test`/`check` (no -p/--workspace) still targets only
# the core crate -- unchanged behavior from before this was a workspace.
# The wasm crate is built explicitly (`-p batis-xml-wasm` or `wasm-pack`).
default-members = ["."]

[package]
name = "batis-xml"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ESPINS <dlwlalsggg@gmail.com>"]
description = "Parser and dynamic-SQL flattener for MyBatis and iBatis mapper XML — resilient to broken legacy input, with a language-neutral JSON output model"
license = "MIT OR Apache-2.0"
repository = "https://github.com/espins-labs/batis-xml"
keywords = ["mybatis", "ibatis", "sql", "parser", "xml"]
categories = ["parser-implementations"]
# CLAUDE.md is an internal agent working agreement, not user-facing; .github/
# is CI/issue-template plumbing; rust-toolchain.toml pins a local dev/CI
# toolchain version, irrelevant (and potentially confusing -- it could
# shadow a consumer's own toolchain file) once vendored into a downstream
# build; release-plz.toml only matters to this repo's own release
# automation (B25, cold code review). fixtures/hostile/* is deliberately
# NOT excluded (cold review B11): it used to be, but that broke
# hostile_never_panics for anyone building/testing straight from the
# published crate source (e.g. downstream distro packagers) -- the "never
# panics" guarantee is a headline claim of this crate, so the test needs
# real fixtures to mean anything there too. The files are tiny; the
# package-size cost is negligible.
exclude = ["CLAUDE.md", ".github/", "rust-toolchain.toml", "release-plz.toml"]

[package.metadata.docs.rs]
all-features = true

# wasm constraint: pure-Rust dependencies only (keep wasm32-unknown-unknown clean)
[dependencies]
quick-xml = "0.37"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional, off by default: JSON Schema generation for schema/batis-xml.v1.json.
# Pure Rust, so enabling it doesn't affect the wasm32-unknown-unknown gate.
schemars = { version = "0.8", optional = true }

[features]
schema = ["dep:schemars"]

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
criterion = { version = "0.5", default-features = false }
# Scratch tooling only (examples/k1_harness.rs) — not part of the
# published library, doesn't affect the wasm32 build.
regex = "1"

[[bench]]
name = "parse_1mb"
harness = false
